--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:theme="@style/Theme.HungryHive"
         tools:targetApi="31">
         <activity
+            android:name=".ThankYouActivity"
+            android:exported="false" />
+        <activity
             android:name=".homeScreen"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".registerScreen"
             android:exported="false" />
@@ -45,7 +48,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
