--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HungryHive"
         tools:targetApi="31">
+        
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.ratna.hungryhive.provider"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            android:permission="android.permission.MANAGE_EXTERNAL_STORAGE">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".forgetPassword"
             android:exported="false" />
